--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         a { color: #0073e6; text-decoration: none; }
         a:hover { text-decoration: underline; }
         article { background-color: white; padding: 20px; border-radius: 10px; margin-bottom: 20px; }
+        nav { margin-bottom: 30px; text-align: center; }
     </style>
 </head>
 <body>
@@ -19,10 +20,20 @@
         <p>Teknoloji, yazılım ve AI üzerine yazılar</p>
     </header>
 
+    <nav>
+        <a href="index.html">Ana Sayfa</a> | 
+        <a href="ikinci-yazi.html">İkinci Yazım</a>
+    </nav>
+
     <article>
         <h2>İlk Blog Yazım</h2>
         <p>Merhaba! Bu benim GitHub Pages üzerinden yayınladığım ilk blog yazım. Burada projelerim ve teknoloji üzerine düşüncelerimi paylaşacağım.</p>
         <a href="https://github.com/HasanEzibay">Projelerimi gör</a>
+    </article>
+
+    <article>
+        <h2>İkinci Blog Yazısına Geç</h2>
+        <p>Daha fazla yazıyı görmek için <a href="ikinci-yazi.html">buraya tıklayın</a>.</p>
     </article>
 </body>
 </html>
