--- a/index.html
+++ b/index.html
@@ -1,49 +1,30 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hasan Ezibay Blog</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ana Sayfa | Hasan Ezibay</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Hasan Ezibay Blog</h1>
-        <nav>
-            <a href="#anasayfa">Anasayfa</a>
-            <a href="#blog">Blog</a>
-            <a href="#iletisim">İletişim</a>
-        </nav>
-    </header>
+  <header>
+    <h1>Hasan Ezibay</h1>
+    <nav>
+      <a href="index.html">Anasayfa</a>
+      <a href="about.html">Hakkımda</a>
+      <a href="blog.html">Blog</a>
+      <a href="projects.html">Projeler</a>
+      <a href="contact.html">İletişim</a>
+    </nav>
+  </header>
 
-    <main>
-        <section id="anasayfa">
-            <h2>Hoşgeldiniz!</h2>
-            <p>Bu benim kişisel blog sayfam. Burada yazılım, girişimcilik ve teknoloji üzerine yazılar paylaşacağım.</p>
-        </section>
+  <section class="hero">
+    <h2>Hoşgeldiniz!</h2>
+    <p>Ben Hasan Ezibay. Girişimci, yazılım geliştirici ve vizyon sahibi.</p>
+  </section>
 
-        <section id="blog">
-            <h2>Blog Yazıları</h2>
-            <div id="posts">
-                <!-- Blog yazıları JavaScript ile eklenecek -->
-            </div>
-        </section>
-
-        <section id="iletisim">
-            <h2>İletişim</h2>
-            <form id="contactForm">
-                <input type="text" placeholder="Adınız" required>
-                <input type="email" placeholder="E-posta" required>
-                <textarea placeholder="Mesajınız" required></textarea>
-                <button type="submit">Gönder</button>
-            </form>
-        </section>
-    </main>
-
-    <footer>
-        <p>&copy; 2025 Hasan Ezibay</p>
-    </footer>
-
-    <script src="script.js"></script>
+  <footer>
+    <p>&copy; 2025 Hasan Ezibay</p>
+  </footer>
 </body>
 </html>
