--- a/index.html
+++ b/index.html
@@ -3,28 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ana Sayfa | Hasan Ezibay</title>
+  <title>Hasan'ın Blogu</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Hasan Ezibay</h1>
+    <h1>Hasan'ın Blogu</h1>
     <nav>
-      <a href="index.html">Anasayfa</a>
-      <a href="about.html">Hakkımda</a>
-      <a href="blog.html">Blog</a>
-      <a href="projects.html">Projeler</a>
-      <a href="contact.html">İletişim</a>
+      <a href="index.html">Ana Sayfa</a>
+      <a href="admin.html">Yazı Ekle</a>
     </nav>
   </header>
 
-  <section class="hero">
-    <h2>Hoşgeldiniz!</h2>
-    <p>Ben Hasan Ezibay. Girişimci, yazılım geliştirici ve vizyon sahibi.</p>
-  </section>
+  <main>
+    <section id="blogPosts">
+      <!-- Yazılar buraya JS ile gelecek -->
+    </section>
+  </main>
 
   <footer>
-    <p>&copy; 2025 Hasan Ezibay</p>
+    <p>© 2025 Hasan Ezibay | Tüm Hakları Saklıdır</p>
   </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
