--- a/admin.html
+++ b/admin.html
@@ -3,48 +3,37 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Admin Paneli | Hasan Ezibay</title>
+  <title>Yazı Ekle - Admin Panel</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Blog Admin Paneli</h1>
+    <h1>Admin Paneli</h1>
     <nav>
       <a href="index.html">Ana Sayfa</a>
-      <a href="admin.html">Admin Paneli</a>
+      <a href="admin.html">Yazı Ekle</a>
     </nav>
   </header>
 
   <main>
-    <h2>Yeni Yazı Ekle</h2>
-    <form id="postForm">
-      <input type="text" id="title" placeholder="Başlık" required><br><br>
-      <textarea id="content" placeholder="İçerik" rows="6" required></textarea><br><br>
-      <button type="submit">Kaydet</button>
-    </form>
+    <section id="addPost">
+      <h2>Yeni Yazı Ekle</h2>
+      <form id="postForm">
+        <label for="title">Başlık</label>
+        <input type="text" id="title" required>
+
+        <label for="content">İçerik</label>
+        <textarea id="content" rows="6" required></textarea>
+
+        <button type="submit">Yazıyı Kaydet</button>
+      </form>
+    </section>
   </main>
 
-  <script>
-    document.getElementById('postForm').addEventListener('submit', function(e) {
-      e.preventDefault();
+  <footer>
+    <p>© 2025 Hasan Ezibay | Admin Panel</p>
+  </footer>
 
-      const title = document.getElementById('title').value;
-      const content = document.getElementById('content').value;
-
-      const newPost = {
-        id: Date.now(),
-        title: title,
-        date: new Date().toISOString().split('T')[0],
-        content: content
-      };
-
-      let localPosts = JSON.parse(localStorage.getItem('localPosts')) || [];
-      localPosts.push(newPost);
-      localStorage.setItem('localPosts', JSON.stringify(localPosts));
-
-      alert("Yazı başarıyla eklendi!");
-      document.getElementById('postForm').reset();
-    });
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
